--- a/Welcome_to_Colaboratory.ipynb
+++ b/Welcome_to_Colaboratory.ipynb
@@ -2105,9 +2105,104 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from sympy import *\n",
+        "init_printing()\n",
+        "\n",
+        "\n",
+        "x = symbols('x')\n",
+        "\n",
+        "Integral(cos(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 55
+        },
+        "id": "INXrj1NXlmy6",
+        "outputId": "b3186638-3b3c-49b7-f7fd-d2ae21ff945a"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "⌠          \n",
+              "⎮ cos(x) dx\n",
+              "⌡          "
+            ],
+            "text/latex": "$\\displaystyle \\int \\cos{\\left(x \\right)}\\, dx$"
+          },
+          "metadata": {},
+          "execution_count": 92
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integrate(cos(x))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "1aMrD3TtlnFQ",
+        "outputId": "7d84969d-ff96-499f-a6ff-bdb134e6958a"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "sin(x)"
+            ],
+            "text/latex": "$\\displaystyle \\sin{\\left(x \\right)}$"
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integrate(x**2-2*x)"
+      ],
+      "metadata": {
+        "id": "9MRVwiXLxZzv",
+        "outputId": "5bf31f74-ed5f-42cc-d374-df1186fc6269",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        }
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              " 3     \n",
+              "x     2\n",
+              "── - x \n",
+              "3      "
+            ],
+            "text/latex": "$\\displaystyle \\frac{x^{3}}{3} - x^{2}$"
+          },
+          "metadata": {},
+          "execution_count": 94
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "INXrj1NXlmy6"
+        "id": "vA6Q6pMSxZ2k"
       },
       "execution_count": null,
       "outputs": []
@@ -2116,7 +2211,16 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "1aMrD3TtlnFQ"
+        "id": "HyaOnXIVxZ7k"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yCoibGnQxZ-i"
       },
       "execution_count": null,
       "outputs": []
